Import patches-unapplied version 5.3.0-1 to debian/sid
Imported using git-ubuntu import.

Changelog parent: b216b61d3fb63f42835215e278975afd7649a720

New changelog entries:
  * New upstream version
  * Enable gnome-keyring
  * Upload to experimental, initially

--- a/Makefile.am
+++ b/Makefile.am
@@ -15,7 +15,7 @@ if ENABLE_PLUGINS
 pkgconfig_DATA += mission-control.pc
 endif
 
-DISTCHECK_CONFIGURE_FLAGS = --enable-gtk-doc
+DISTCHECK_CONFIGURE_FLAGS = --enable-gtk-doc --disable-gnome-keyring
 
 include tools/lcov.am
 include tools/telepathy.am
