--- a/debian/control
+++ b/debian/control
@@ -8,6 +8,7 @@ Build-Depends: cdbs,
                libdbus-1-dev (>= 1.0),
                libdbus-glib-1-dev (>= 0.80),
                libglib2.0-dev (>= 2.16),
+               libgnome-keyring-dev,
                libtelepathy-glib-dev (>= 0.7.33),
                pkg-config (>= 0.21),
                python (>= 2.5),
