--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -8,6 +8,10 @@ INCLUDES = \
 	-DMC_DISABLE_DEPRECATED \
 	-DLIBDIR="@libdir@" -DLIBVERSION="0"
 
+if ENABLE_GNOME_KEYRING
+INCLUDES += $(GNOME_KEYRING_CFLAGS)
+endif
+
 if HAVE_TESTS
 
 SUBDIRS = twisted
