--- a/test/twisted/tools/Makefile.am
+++ b/test/twisted/tools/Makefile.am
@@ -31,6 +31,7 @@ EXTRA_DIST = \
 	$(conf_in_files) \
 	exec-with-log.sh.in \
 	fake-startup.sh \
+	valgrind.supp \
 	with-session-bus.sh
 
 CLEANFILES = \
