--- a/util/Makefile.in
+++ b/util/Makefile.in
@@ -128,6 +128,8 @@ ECHO_C = @ECHO_C@
 ECHO_N = @ECHO_N@
 ECHO_T = @ECHO_T@
 EGREP = @EGREP@
+ENABLE_GNOME_KEYRING_FALSE = @ENABLE_GNOME_KEYRING_FALSE@
+ENABLE_GNOME_KEYRING_TRUE = @ENABLE_GNOME_KEYRING_TRUE@
 ENABLE_GTK_DOC_FALSE = @ENABLE_GTK_DOC_FALSE@
 ENABLE_GTK_DOC_TRUE = @ENABLE_GTK_DOC_TRUE@
 ENABLE_MC_CLIENT_SO6_FALSE = @ENABLE_MC_CLIENT_SO6_FALSE@
@@ -147,6 +149,8 @@ GLIB_LIBS = @GLIB_LIBS@
 GLIB_MKENUMS = @GLIB_MKENUMS@
 GMODULE_CFLAGS = @GMODULE_CFLAGS@
 GMODULE_LIBS = @GMODULE_LIBS@
+GNOME_KEYRING_CFLAGS = @GNOME_KEYRING_CFLAGS@
+GNOME_KEYRING_LIBS = @GNOME_KEYRING_LIBS@
 GREP = @GREP@
 GTKDOC_CHECK = @GTKDOC_CHECK@
 GTK_DOC_USE_LIBTOOL_FALSE = @GTK_DOC_USE_LIBTOOL_FALSE@
@@ -261,7 +265,10 @@ mc_wait_for_name_SOURCES = wait-for-name.c
 mc_wait_for_name_LDADD = $(TELEPATHY_LIBS)
 dist_man1_MANS = mc-tool.1 $(am__append_2)
 man1_MANS = mc-wait-for-name.1
-EXTRA_DIST = $(man1_MANS:%=%.in)
+EXTRA_DIST = \
+    $(man1_MANS:%=%.in) \
+    mc-account-convert.1
+
 CLEANFILES = $(man1_MANS)
 @HAVE_GCONF_TRUE@mc_account_convert_CPPFLAGS = $(GCONF_CFLAGS)
 @HAVE_GCONF_TRUE@mc_account_convert_SOURCES = mc-account-convert.c
