--- a/xml/Makefile.am
+++ b/xml/Makefile.am
@@ -23,7 +23,8 @@ SPECS = \
 	Client_Handler.xml \
 	Client_Interface_Requests.xml \
 	Client_Observer.xml \
-        Connection_Interface_Contact_Capabilities.xml
+        Connection_Interface_Contact_Capabilities.xml \
+        Connection_Interface_Contact_Capabilities_Draft1.xml
 
 
 SPECS_GEN = ${SPECS:%.xml=_gen/introspect-%.xml}
