--- a/Makefile.in
+++ b/Makefile.in
@@ -126,6 +126,8 @@ ECHO_C = @ECHO_C@
 ECHO_N = @ECHO_N@
 ECHO_T = @ECHO_T@
 EGREP = @EGREP@
+ENABLE_GNOME_KEYRING_FALSE = @ENABLE_GNOME_KEYRING_FALSE@
+ENABLE_GNOME_KEYRING_TRUE = @ENABLE_GNOME_KEYRING_TRUE@
 ENABLE_GTK_DOC_FALSE = @ENABLE_GTK_DOC_FALSE@
 ENABLE_GTK_DOC_TRUE = @ENABLE_GTK_DOC_TRUE@
 ENABLE_MC_CLIENT_SO6_FALSE = @ENABLE_MC_CLIENT_SO6_FALSE@
@@ -145,6 +147,8 @@ GLIB_LIBS = @GLIB_LIBS@
 GLIB_MKENUMS = @GLIB_MKENUMS@
 GMODULE_CFLAGS = @GMODULE_CFLAGS@
 GMODULE_LIBS = @GMODULE_LIBS@
+GNOME_KEYRING_CFLAGS = @GNOME_KEYRING_CFLAGS@
+GNOME_KEYRING_LIBS = @GNOME_KEYRING_LIBS@
 GREP = @GREP@
 GTKDOC_CHECK = @GTKDOC_CHECK@
 GTK_DOC_USE_LIBTOOL_FALSE = @GTK_DOC_USE_LIBTOOL_FALSE@
@@ -257,7 +261,7 @@ SUBDIRS = m4 tools xml libmcclient src server util $(am__append_1) doc \
 	test
 pkgconfigdir = $(libdir)/pkgconfig
 pkgconfig_DATA = libmcclient.pc $(am__append_2)
-DISTCHECK_CONFIGURE_FLAGS = --enable-gtk-doc
+DISTCHECK_CONFIGURE_FLAGS = --enable-gtk-doc --disable-gnome-keyring
 all: config.h
 	$(MAKE) $(AM_MAKEFLAGS) all-recursive
 
