--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -37,21 +37,23 @@ PRE_UNINSTALL = :
 POST_UNINSTALL = :
 build_triplet = @build@
 host_triplet = @host@
+@ENABLE_GNOME_KEYRING_TRUE@am__append_1 = $(GNOME_KEYRING_CFLAGS)
+@ENABLE_GNOME_KEYRING_TRUE@am__append_2 = $(GNOME_KEYRING_LIBS)
 
 # the redundant quoting here is to prevent the libtool command line from
 # looking like an error message in an oddly named file
-@ENABLE_MC_SERVER_SO6_TRUE@@ENABLE_PLUGINS_TRUE@am__append_1 = -version-info "10":"0":"4"
-@ENABLE_MC_SERVER_SO6_FALSE@@ENABLE_PLUGINS_TRUE@am__append_2 = -release $(VERSION)
+@ENABLE_MC_SERVER_SO6_TRUE@@ENABLE_PLUGINS_TRUE@am__append_3 = -version-info "10":"0":"4"
+@ENABLE_MC_SERVER_SO6_FALSE@@ENABLE_PLUGINS_TRUE@am__append_4 = -release $(VERSION)
 
 # We need GModule to load plugins
-@ENABLE_PLUGINS_TRUE@am__append_3 = $(GMODULE_LIBS)
-@ENABLE_PLUGINS_TRUE@am__append_4 = \
+@ENABLE_PLUGINS_TRUE@am__append_5 = $(GMODULE_LIBS)
+@ENABLE_PLUGINS_TRUE@am__append_6 = \
 @ENABLE_PLUGINS_TRUE@	$(GMODULE_CFLAGS) \
 @ENABLE_PLUGINS_TRUE@	-DMCD_DEFAULT_FILTER_PLUGIN_DIR=\"@pluginlibdir@\"
 
 # When plugins are not enabled, libmissioncontrol-server.la is just a copy of
 # the convenience library
-@ENABLE_PLUGINS_FALSE@am__append_5 = libmissioncontrol-server.la
+@ENABLE_PLUGINS_FALSE@am__append_7 = libmissioncontrol-server.la
 subdir = src
 DIST_COMMON = $(am__mission_control_include_HEADERS_DIST) \
 	$(srcdir)/Makefile.am $(srcdir)/Makefile.in
@@ -80,20 +82,21 @@ am__installdirs = "$(DESTDIR)$(libdir)" \
 libLTLIBRARIES_INSTALL = $(INSTALL)
 LTLIBRARIES = $(lib_LTLIBRARIES) $(noinst_LTLIBRARIES)
 am__DEPENDENCIES_1 =
-@ENABLE_PLUGINS_TRUE@am__DEPENDENCIES_2 = $(am__DEPENDENCIES_1)
+@ENABLE_GNOME_KEYRING_TRUE@am__DEPENDENCIES_2 = $(am__DEPENDENCIES_1)
+@ENABLE_PLUGINS_TRUE@am__DEPENDENCIES_3 = $(am__DEPENDENCIES_1)
 libmcd_convenience_la_DEPENDENCIES =  \
 	$(top_builddir)/libmcclient/libmcclient.la \
 	$(am__DEPENDENCIES_1) $(am__DEPENDENCIES_1) \
-	$(am__DEPENDENCIES_1) $(am__DEPENDENCIES_2)
+	$(am__DEPENDENCIES_1) $(am__DEPENDENCIES_2) \
+	$(am__DEPENDENCIES_3)
 am__objects_1 =
 am_libmcd_convenience_la_OBJECTS = mcd-account.lo \
 	mcd-account-compat.lo mcd-account-conditions.lo \
 	mcd-account-connection.lo mcd-account-requests.lo \
 	mcd-account-stats.lo mcd-account-manager.lo \
 	mcd-account-manager-query.lo mcd-client.lo mcd-dbusprop.lo \
-	mcd-debug.lo mcd-dispatch-operation.lo mcd-enum-types.lo \
-	mcd-handler-map.lo mcd-signals-marshal.lo mcd-misc.lo \
-	mcd-mission.lo mcd-operation.lo mcd-controller.lo \
+	mcd-debug.lo mcd-dispatch-operation.lo mcd-handler-map.lo \
+	mcd-misc.lo mcd-mission.lo mcd-operation.lo mcd-controller.lo \
 	mcd-master.lo mcd-manager.lo mcd-connection.lo \
 	mcd-dispatcher.lo mcd-channel.lo mcd-service.lo mcd-proxy.lo \
 	mcd-transport.lo mcd-provisioning.lo \
@@ -104,7 +107,8 @@ nodist_libmcd_convenience_la_OBJECTS = signals-marshal.lo \
 	svc-Account_Interface_Conditions.lo \
 	svc-Account_Interface_Stats.lo \
 	svc-Account_Manager_Interface_Creation.lo \
-	svc-Account_Manager_Interface_Query.lo $(am__objects_1)
+	svc-Account_Manager_Interface_Query.lo mcd-enum-types.lo \
+	mcd-signals-marshal.lo $(am__objects_1)
 libmcd_convenience_la_OBJECTS = $(am_libmcd_convenience_la_OBJECTS) \
 	$(nodist_libmcd_convenience_la_OBJECTS)
 @ENABLE_PLUGINS_FALSE@libmissioncontrol_server_la_DEPENDENCIES =  \
@@ -135,10 +139,10 @@ DIST_SOURCES = $(libmcd_convenience_la_SOURCES) \
 	$(libmissioncontrol_server_la_SOURCES)
 am__mission_control_include_HEADERS_DIST = mcd-account.h \
 	mcd-account-compat.h mcd-account-conditions.h \
-	mcd-account-manager.h mcd-debug.h mcd-dispatch-operation.h \
-	mcd-mission.h mcd-operation.h mcd-master.h mcd-controller.h \
-	mcd-manager.h mcd-connection.h mcd-connection-plugin.h \
-	mcd-plugin.h mcd-presence-frame.h mcd-channel.h mcd-proxy.h \
+	mcd-account-manager.h mcd-debug.h mcd-mission.h \
+	mcd-operation.h mcd-master.h mcd-controller.h mcd-manager.h \
+	mcd-connection.h mcd-connection-plugin.h mcd-plugin.h \
+	mcd-presence-frame.h mcd-channel.h mcd-proxy.h \
 	mcd-dispatcher.h mcd-dispatcher-context.h mcd-service.h \
 	mcd-transport.h mcd-provisioning.h mcd-provisioning-factory.h
 mission_control_includeHEADERS_INSTALL = $(INSTALL_HEADER)
@@ -181,6 +185,8 @@ ECHO_C = @ECHO_C@
 ECHO_N = @ECHO_N@
 ECHO_T = @ECHO_T@
 EGREP = @EGREP@
+ENABLE_GNOME_KEYRING_FALSE = @ENABLE_GNOME_KEYRING_FALSE@
+ENABLE_GNOME_KEYRING_TRUE = @ENABLE_GNOME_KEYRING_TRUE@
 ENABLE_GTK_DOC_FALSE = @ENABLE_GTK_DOC_FALSE@
 ENABLE_GTK_DOC_TRUE = @ENABLE_GTK_DOC_TRUE@
 ENABLE_MC_CLIENT_SO6_FALSE = @ENABLE_MC_CLIENT_SO6_FALSE@
@@ -200,6 +206,8 @@ GLIB_LIBS = @GLIB_LIBS@
 GLIB_MKENUMS = @GLIB_MKENUMS@
 GMODULE_CFLAGS = @GMODULE_CFLAGS@
 GMODULE_LIBS = @GMODULE_LIBS@
+GNOME_KEYRING_CFLAGS = @GNOME_KEYRING_CFLAGS@
+GNOME_KEYRING_LIBS = @GNOME_KEYRING_LIBS@
 GREP = @GREP@
 GTKDOC_CHECK = @GTKDOC_CHECK@
 GTK_DOC_USE_LIBTOOL_FALSE = @GTK_DOC_USE_LIBTOOL_FALSE@
@@ -308,15 +316,15 @@ sharedstatedir = @sharedstatedir@
 sysconfdir = @sysconfdir@
 target_alias = @target_alias@
 INCLUDES = $(TELEPATHY_CFLAGS) $(DBUS_CFLAGS) $(GLIB_CFLAGS) \
-	-DDBUS_API_SUBJECT_TO_CHANGE -DMC_DISABLE_DEPRECATED \
-	-I$(top_srcdir) $(am__append_4)
+	-DDBUS_API_SUBJECT_TO_CHANGE -DG_LOG_DOMAIN=\"mcd\" \
+	-DMC_DISABLE_DEPRECATED -I$(top_srcdir) $(am__append_1) \
+	$(am__append_6)
 mc_headers = \
 	mcd-account.h \
 	mcd-account-compat.h \
 	mcd-account-conditions.h \
 	mcd-account-manager.h \
 	mcd-debug.h \
-	mcd-dispatch-operation.h \
 	mcd-mission.h \
 	mcd-operation.h \
 	mcd-master.h \
@@ -336,6 +344,7 @@ mc_headers = \
 	mcd-provisioning-factory.h
 
 mc_gen_headers = \
+	_gen/cli-Connection_Interface_Contact_Capabilities_Draft1.h \
 	_gen/cli-Connection_Interface_Contact_Capabilities.h \
 	_gen/enums.h \
 	_gen/svc-Account_Interface_ChannelRequests.h \
@@ -346,6 +355,7 @@ mc_gen_headers = \
 	_gen/svc-Account_Manager_Interface_Query.h
 
 nodist_libmcd_convenience_la_SOURCES = \
+	_gen/cli-Connection_Interface_Contact_Capabilities_Draft1-body.h \
 	_gen/cli-Connection_Interface_Contact_Capabilities-body.h \
 	_gen/register-dbus-glib-marshallers-body.h \
 	_gen/signals-marshal.c \
@@ -357,23 +367,22 @@ nodist_libmcd_convenience_la_SOURCES = \
 	_gen/svc-Account_Interface_Stats.c \
 	_gen/svc-Account_Manager_Interface_Creation.c \
 	_gen/svc-Account_Manager_Interface_Query.c \
+	mcd-enum-types.c \
+	mcd-enum-types.h \
+	mcd-signals-marshal.c \
+	mcd-signals-marshal.h \
 	$(mc_gen_headers)
 
 BUILT_SOURCES = \
 	_gen/mcd.xml \
-	mcd-signals-marshal.h \
-	mcd-signals-marshal.c \
-	mcd-enum-types.c \
-	mcd-enum-types.h \
 	stamp-mcd-enum-types.h \
-	$(nodist_libmcd_convenience_la_SOURCES) \
-	$(mc_gen_headers)
+	$(nodist_libmcd_convenience_la_SOURCES)
 
 CLEANFILES = $(BUILT_SOURCES)
 libmcd_convenience_la_LIBADD =  \
 	$(top_builddir)/libmcclient/libmcclient.la $(TELEPATHY_LIBS) \
-	$(DBUS_LIBS) $(GLIB_LIBS) $(am__append_3)
-noinst_LTLIBRARIES = libmcd-convenience.la $(am__append_5)
+	$(DBUS_LIBS) $(GLIB_LIBS) $(am__append_2) $(am__append_5)
+noinst_LTLIBRARIES = libmcd-convenience.la $(am__append_7)
 
 # When plugins are enabled, libmissioncontrol-server.la is a shared library
 # that wraps the convenience library
@@ -385,7 +394,7 @@ noinst_LTLIBRARIES = libmcd-convenience.la $(am__append_5)
 @ENABLE_PLUGINS_TRUE@libmissioncontrol_server_la_LDFLAGS =  \
 @ENABLE_PLUGINS_TRUE@	-export-symbols-regex \
 @ENABLE_PLUGINS_TRUE@	'^((mc_)|(mcd_)|(mission_control_))' \
-@ENABLE_PLUGINS_TRUE@	$(am__append_1) $(am__append_2)
+@ENABLE_PLUGINS_TRUE@	$(am__append_3) $(am__append_4)
 @ENABLE_PLUGINS_TRUE@mission_control_includedir = $(includedir)/mission-control
 @ENABLE_PLUGINS_TRUE@mission_control_include_HEADERS = $(mc_headers)
 @ENABLE_PLUGINS_TRUE@genincludedir = $(mission_control_includedir)/_gen
@@ -409,11 +418,8 @@ libmcd_convenience_la_SOURCES = \
 	mcd-debug.c \
 	mcd-dispatch-operation.c \
 	mcd-dispatch-operation-priv.h \
-	mcd-enum-types.c \
-	mcd-enum-types.h \
 	mcd-handler-map.c \
 	mcd-handler-map-priv.h \
-	mcd-signals-marshal.c \
 	mcd-misc.c \
 	mcd-misc.h \
 	mcd-mission.c \
@@ -861,16 +867,6 @@ uninstall-am: uninstall-info-am uninstall-libLTLIBRARIES \
 	uninstall-mission_control_includeHEADERS \
 	uninstall-nodist_genincludeHEADERS
 
-
-# bin_PROGRAMS = mission-control
-# mission_control_LDFLAGS = -export-dynamic
-# 
-# mission_control_LDADD = $(GCONF_LIBS) $(TELEPATHY_LIBS) \
-# 		       	$(top_builddir)/libmissioncontrol/libmissioncontrol-config.la \
-# 		       	libmissioncontrol-server.la
-#
-# mission_control_SOURCES = \
-# 	mcd-main.c
 
 %-signals-marshal.h: %-signals-marshal.list Makefile
 	glib-genmarshal --header --prefix=_$(subst -,_,$*)_marshal $< > $*-signals-marshal.h
