--- a/xml/Makefile.in
+++ b/xml/Makefile.in
@@ -86,6 +86,8 @@ ECHO_C = @ECHO_C@
 ECHO_N = @ECHO_N@
 ECHO_T = @ECHO_T@
 EGREP = @EGREP@
+ENABLE_GNOME_KEYRING_FALSE = @ENABLE_GNOME_KEYRING_FALSE@
+ENABLE_GNOME_KEYRING_TRUE = @ENABLE_GNOME_KEYRING_TRUE@
 ENABLE_GTK_DOC_FALSE = @ENABLE_GTK_DOC_FALSE@
 ENABLE_GTK_DOC_TRUE = @ENABLE_GTK_DOC_TRUE@
 ENABLE_MC_CLIENT_SO6_FALSE = @ENABLE_MC_CLIENT_SO6_FALSE@
@@ -105,6 +107,8 @@ GLIB_LIBS = @GLIB_LIBS@
 GLIB_MKENUMS = @GLIB_MKENUMS@
 GMODULE_CFLAGS = @GMODULE_CFLAGS@
 GMODULE_LIBS = @GMODULE_LIBS@
+GNOME_KEYRING_CFLAGS = @GNOME_KEYRING_CFLAGS@
+GNOME_KEYRING_LIBS = @GNOME_KEYRING_LIBS@
 GREP = @GREP@
 GTKDOC_CHECK = @GTKDOC_CHECK@
 GTK_DOC_USE_LIBTOOL_FALSE = @GTK_DOC_USE_LIBTOOL_FALSE@
@@ -235,7 +239,8 @@ SPECS = \
 	Client_Handler.xml \
 	Client_Interface_Requests.xml \
 	Client_Observer.xml \
-        Connection_Interface_Contact_Capabilities.xml
+        Connection_Interface_Contact_Capabilities.xml \
+        Connection_Interface_Contact_Capabilities_Draft1.xml
 
 SPECS_GEN = ${SPECS:%.xml=_gen/introspect-%.xml}
 EXTRA_DIST = \
