Import patches-unapplied version 5.3.1-1 to debian/sid
Imported using git-ubuntu import.

Changelog parent: 12549a80f8e8c80d95502f2f97bd6a265d824979

New changelog entries:
  * New upstream version
  * Target unstable (where the previous release also ended up, by mistake...)

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -2,7 +2,6 @@ INCLUDES = \
 	   $(TELEPATHY_CFLAGS) \
 	   $(DBUS_CFLAGS) \
 	   $(GLIB_CFLAGS) \
-	   -DDBUS_API_SUBJECT_TO_CHANGE \
 	   -DG_LOG_DOMAIN=\"mcd\" \
 	   -DMC_DISABLE_DEPRECATED -I$(top_srcdir)
 
@@ -42,7 +41,6 @@ mc_gen_headers = \
 	_gen/svc-Account_Interface_Compat.h \
 	_gen/svc-Account_Interface_Conditions.h \
 	_gen/svc-Account_Interface_Stats.h \
-	_gen/svc-Account_Manager_Interface_Creation.h \
 	_gen/svc-Account_Manager_Interface_Query.h
 
 nodist_libmcd_convenience_la_SOURCES = \
@@ -56,7 +54,6 @@ nodist_libmcd_convenience_la_SOURCES = \
 	_gen/svc-Account_Interface_Compat.c \
 	_gen/svc-Account_Interface_Conditions.c \
 	_gen/svc-Account_Interface_Stats.c \
-	_gen/svc-Account_Manager_Interface_Creation.c \
 	_gen/svc-Account_Manager_Interface_Query.c \
 	mcd-enum-types.c \
 	mcd-enum-types.h \
@@ -144,6 +141,7 @@ libmcd_convenience_la_SOURCES = \
 	mcd-misc.c \
 	mcd-misc.h \
 	mcd-mission.c \
+	mcd-mission-priv.h \
 	mcd-operation.c \
 	mcd-controller.c \
 	mcd-master.c \
