--- a/test/twisted/Makefile.in
+++ b/test/twisted/Makefile.in
@@ -194,6 +194,10 @@ PATH_SEPARATOR = @PATH_SEPARATOR@
 PKG_CONFIG = @PKG_CONFIG@
 PROFILES_DIR = @PROFILES_DIR@
 PYTHON = @PYTHON@
+PYTHON_EXEC_PREFIX = @PYTHON_EXEC_PREFIX@
+PYTHON_PLATFORM = @PYTHON_PLATFORM@
+PYTHON_PREFIX = @PYTHON_PREFIX@
+PYTHON_VERSION = @PYTHON_VERSION@
 RANLIB = @RANLIB@
 SED = @SED@
 SET_MAKE = @SET_MAKE@
@@ -201,7 +205,6 @@ SHELL = @SHELL@
 STRIP = @STRIP@
 TELEPATHY_CFLAGS = @TELEPATHY_CFLAGS@
 TELEPATHY_LIBS = @TELEPATHY_LIBS@
-TEST_PYTHON = @TEST_PYTHON@
 VERSION = @VERSION@
 WANT_TWISTED_TESTS_FALSE = @WANT_TWISTED_TESTS_FALSE@
 WANT_TWISTED_TESTS_TRUE = @WANT_TWISTED_TESTS_TRUE@
@@ -247,10 +250,14 @@ mandir = @mandir@
 mkdir_p = @mkdir_p@
 oldincludedir = @oldincludedir@
 pdfdir = @pdfdir@
+pkgpyexecdir = @pkgpyexecdir@
+pkgpythondir = @pkgpythondir@
 pluginlibdir = @pluginlibdir@
 prefix = @prefix@
 program_transform_name = @program_transform_name@
 psdir = @psdir@
+pyexecdir = @pyexecdir@
+pythondir = @pythondir@
 sbindir = @sbindir@
 sharedstatedir = @sharedstatedir@
 sysconfdir = @sysconfdir@
@@ -262,10 +269,8 @@ TWISTED_BASIC_TESTS = account-manager/account-basics.py \
 	account-manager/create-with-properties.py \
 	account-manager/enable.py \
 	account-manager/enable-auto-connect.py \
-	account-manager/nickname.py \
-	account-manager/old-create-with-properties.py \
-	account-manager/param-types.py account-manager/presence.py \
-	account-manager/reconnect.py \
+	account-manager/nickname.py account-manager/param-types.py \
+	account-manager/presence.py account-manager/reconnect.py \
 	account-manager/recover-from-disconnect.py \
 	account-manager/request-online.py \
 	account-manager/update-parameters.py \
@@ -295,6 +300,9 @@ TWISTED_BASIC_TESTS = account-manager/account-basics.py \
 TWISTED_SPECIAL_BUILD_TESTS = \
 	account-manager/auto-away.py \
 	dispatcher/create-lowmem.py
+
+TWISTED_SLOW_TESTS = \
+	account-manager/server-drops-us.py
 
 TWISTED_SEPARATE_TESTS = \
 	account-manager/auto-connect.py \
@@ -341,14 +349,15 @@ WITH_SESSION_BUS = \
 
 COMBINED_TESTS_ENVIRONMENT = \
 	$(BASIC_TESTS_ENVIRONMENT) \
-	$(TEST_PYTHON)
+	$(PYTHON)
 
 SEPARATE_TESTS_ENVIRONMENT = \
 	$(BASIC_TESTS_ENVIRONMENT) \
 	$(WITH_SESSION_BUS) \
-	$(TEST_PYTHON)
+	$(PYTHON)
 
 TORTURE_REPEATS = 100
+CHECK_TWISTED_SLOW = 
 EXTRA_DIST = \
 	$(TWISTED_BASIC_TESTS) \
 	$(TWISTED_SEPARATE_TESTS) \
@@ -863,16 +872,21 @@ check-torture:
 _check-torture:
 	for i in `seq 1 $(TORTURE_REPEATS)`; do \
 		$(MAKE) check-TESTS \
-			TESTS='$$(TWISTED_BASIC_TESTS)' \
+			TESTS='$$(TWISTED_BASIC_TESTS) $$(TWISTED_SLOW_TESTS)'\
 			TESTS_ENVIRONMENT='$$(COMBINED_TESTS_ENVIRONMENT)'; \
 		e=$$?; \
 		test z$$e = z0 || break; \
 	done
 
 check-combined:
+	if test x$(CHECK_TWISTED_SLOW) = x; then \
+		extra_tests= ; \
+	else \
+		extra_tests=' $$(TWISTED_SLOW_TESTS)'; \
+	fi; \
 	env $(BASIC_TESTS_ENVIRONMENT) $(WITH_SESSION_BUS) \
 	$(MAKE) check-TESTS \
-		TESTS='$$(TWISTED_BASIC_TESTS)' \
+		TESTS='$$(TWISTED_BASIC_TESTS)'"$${extra_tests}" \
 		TESTS_ENVIRONMENT='$$(COMBINED_TESTS_ENVIRONMENT)'
 
 check-separate:
