Import patches-unapplied version 5.3.2-2 to debian/sid
Imported using git-ubuntu import.

Changelog parent: b604483ed2d15280eb6d92798904d7e876027d46

New changelog entries:
  * Also ship the AccountManager service file

--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,9 @@ Source: telepathy-mission-control-5
 Section: net
 Priority: optional
 Maintainer: Debian Telepathy maintainers <pkg-telepathy-maintainers@lists.alioth.debian.org>
-Uploaders: Simon McVittie <smcv@debian.org>, Jonny Lamb <jonny@debian.org>
+Uploaders: Simon McVittie <smcv@debian.org>,
+           Jonny Lamb <jonny@debian.org>,
+           Sjoerd Simons <sjoerd@debian.org>
 Build-Depends: cdbs,
                debhelper (>= 5),
                libdbus-1-dev (>= 1.0),
