Import patches-unapplied version 5.4.1-1 to debian/sid
Imported using git-ubuntu import.

Changelog parent: faefce148545b89ff1f0fc7b4871326ccabab82c

New changelog entries:
  * New upstream release

--- a/test/twisted/Makefile.am
+++ b/test/twisted/Makefile.am
@@ -5,6 +5,7 @@ TWISTED_BASIC_TESTS = \
 	account-manager/bad-cm.py \
 	account-manager/avatar.py \
 	account-manager/create-auto-connect.py \
+	account-manager/create-twice.py \
 	account-manager/create-with-properties.py \
 	account-manager/enable.py \
 	account-manager/enable-auto-connect.py \
