Import patches-unapplied version 5.4.2-1 to debian/sid
Imported using git-ubuntu import.

Changelog parent: 7d570c28bd8306885ac0ed87252027180db7a3c7

New changelog entries:
  * New upstream release, fixing potential segfaults on startup

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -151,6 +151,7 @@ libmcd_convenience_la_SOURCES = \
 	mcd-master.c \
 	mcd-master-priv.h \
 	mcd-manager.c \
+	mcd-manager-priv.h \
 	mcd-connection.c \
 	mcd-connection-priv.h \
 	mcd-dispatcher.c \
